[package]
name = "pm1-control-model"
version = "0.2.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
nalgebra = { version = "*", optional = true }

[features]
default = ["motor", "predict"]
motor = []
odometry = ["nalgebra"]
predict = ["odometry"]
